# rocrate-tabular

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: linting.yml  tests.yml
src/rocrate_tabular/: find_bad_bytes.py  jsonld_context.py  rocrate_tabular.py  tabulator.py  tinycrate.py
tests/: conftest.py  cratebuilder.py  test_basic.py  test_crates.py  test_expanded_properties.py  test_export_csv.py  test_fuzz.py  test_jsonld_context.py  test_relational.py  util.py
tests/crates/languageFamily/: ro-crate-metadata.json  ro-crate-preview.html
tests/crates/textfiles/: ro-crate-metadata.json
