[project]
name = "rocrate-tabular"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "sqlite-utils>=3.37",
]

[project.scripts]
tabulator = "rocrate_tabular.tabulator:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]

[dependency-groups]
dev = [
    "pytest-httpserver>=1.1.0",
]
